# uni

./: README.md
anytask-bot/: .gitignore  anytask_client.py  bot.py  decorators.py  parser.py  scraper.py  student.py
assignments/: .gitmodules  LICENSE  README.md
assignments/АК/: readme.md
assignments/АК/1/: CMakeLists.txt  main.cpp  readme.md
assignments/АК/2/: main.cpp  readme.md
assignments/АК/3/: CMakeLists.txt  abstract_task.h  actual_task.h  direction.h  main.cpp  position_transformer.h
assignments/АК/3/solvers/: abstract_mpi_solver.h  abstract_solver.h  one_thread_solver.h  two_d_solver.h
assignments/АК/mpi-lab-2/: CMakeLists.txt
assignments/АК/mpi-lab-3/: CMakeLists.txt  actual_task.h  block.h  main.cpp  my_utils.h  position_transformer.h  readme.md  test.sh
assignments/КБРС/encrypted-notes/: readme.md
assignments/КБРС/kasiski/: pom.xml
assignments/КС/1/: task1.2.2.pkt  task1.2.3.1.pkt  task1.2.3.2.pkt  task1.2.4.pkt
assignments/КС/12/: CMakeLists.txt  chat_client.cpp  chat_server.cpp  test_client.cpp  test_server.cpp
assignments/ОС/: readme.md
assignments/ПО/: конспект.md
assignments/УП/: 1. Seminar1.ipynb  2. Numpy.ipynb  3. Game of Life.ipynb  4. Matplotlib.ipynb  5. Decorators.ipynb  6. MyAwesomeList.ipynb
encrypted-notes/: pom.xml  readme.md
social-distancing-report/: .gitignore  README.md  webcam-yolo.py
social-distancing-report/report/: annotation.tex  appendix.tex  conclusions.tex  essay.tex  introduction.tex  literature.tex  main.bcf  main.tex  presentation.tex  refs.bib  theory.tex  titlepage.tex
social-distancing-v1/: README.md  main.py
social-distancing-v2/: .gitignore  README.md  SocialDistance.pyproject  SocialDistance.spec  SocialDistancing.spec  app.py  build_ui.sh  download_lob.sh  environment.yml  main.py  requirements.txt  resources.py  util.py  widget.py
social-distancing-v2/conf/: cameras.json
social-distancing-v2/data/: conf.json
social-distancing-v2/gui/: SquareDrawer.py  camera_model.py  drawer2.py  main.py  main_window.py  opencv_util.py  square_drawer.py  thread.py  wizard.py
social-distancing-v2/lib/: composite_frame_mapper.py  frame_processor.py  main.py  util.py
social-distancing-v2/social_distance/: util.py
social-distancing-v2/vision/: frame_processor.py  main.py
(+359 files in other folders)
